# epd_watch

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x  pc_test.sh
.cargo/: config.toml
3D_models/: button_mold.stl  charger_case.stl  charger_lid.stl  watch_buttons.stl  watch_case.stl  watch_filler.stl  watch_lid.stl
code/: Cargo.toml
code/frame_gen/: frame_gen.py  requirements.txt
code/pc_test/: Cargo.toml
code/pc_test/src/: display.rs  io.rs  main.rs  pages.rs
code/scripts/: frame_gen.py  midi_to_beeps.py  requirements.txt
code/src/: display.rs  io.rs  main.rs  pages.rs  shared_data.rs
code/src/display/: display.rs  font.rs  shape.rs
code/src/io/: io.rs  pin_groups.rs  sound.rs
code/src/pages/: core_pages.rs  pages.rs  snake.rs  state.rs  vid_frames.rs  video.rs
hardware/charger/: charger.kicad_sym  fp-lib-table  watch_charger.kicad_pcb  watch_charger.kicad_pro  watch_charger.kicad_sch
hardware/charger/charger.pretty/: pico.kicad_mod
hardware/watch/: epd_watch.kicad_pcb  epd_watch.kicad_pro  epd_watch.kicad_sch  epd_watch.kicad_sym  fp-lib-table  sym-lib-table
hardware/watch/epd_watch.pretty/: FPC-05F-24PH15.kicad_mod  FUET-4020.kicad_mod  KH-3216-A35.kicad_mod  RFANT3216120A5T.kicad_mod  SMD3215.kicad_mod  (+5 more)
pc_test/.cargo/: config.toml
pc_test/src/: display.rs  io.rs  main.rs  pages.rs
src/: display.rs  io.rs  main.rs  pages.rs  sharedData.rs  shared_data.rs
src/display/: display.rs  font.rs  shape.rs
src/io/: io.rs
src/pages/: core_pages.rs  pages.rs  state.rs
src/pc_test/: display.rs  io.rs  pages.rs  pc_test  pc_test.rs
