[package]
name = "epd_watch"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-rtic = { version = "1", default-features = false }
chrono = { version = "0.4.35", default-features = false }
ds323x = "0.5.1"
embedded-hal = "1.0.0"
systick-monotonic = "1.0.0"
rtt-target = "0.6.0"
nrf52832-hal = {version = "0.18.0", features = ["rt"]}
nrf52832-pac = "0.12"
circular-buffer = { version = "0.1", default-features = false }
heapless = "0.8.0"
panic-halt = "0.2.0"